test/libsolidity/syntaxTests/structs/recursion/return_recursive_structs2.sol
contract C {
    struct S { uint a; S[2][] sub; }
    function f() public pure returns (uint, S memory) {
    }
}
// ----
// TypeError: (94-102): Recursive type not allowed for public or external contract functions.
